--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,11 @@ __pycache__/
 .tox/
 .cache/
 .pytest_cache/
+direct/src/distributed/.idea/workspace.xml___jb_tmp___
+direct/src/distributed/.idea/workspace.xml
+direct/src/distributed/.idea/modules.xml
+direct/src/distributed/.idea/misc.xml
+direct/src/distributed/.idea/distributed.iml
+Panda3D-1.10.0-py3.7-x64-pdb.zip
+direct/src/distributed/.idea/codeStyles/codeStyleConfig.xml
+direct/src/distributed/.idea/inspectionProfiles/Project_Default.xml
